updated jupyter notebook

--- a/notebook/model_training.ipynb
+++ b/notebook/model_training.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4  0.90  563.5  318.5  122.50  7.0   2  0.0   0  20.84  28.28"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,19 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define input and output\n",
     "X = df.iloc[:, :-2] # 8 input variables\n",
-    "y1 = df.iloc[:, -2] # first output\n",
-    "y2 = df.iloc[:, -1] # second output"
+    "y = df.iloc[:, -2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,18 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# divide the dataset as train and test sets\n",
-    "X_train1, X_test1, y_train1, y_test1 = train_test_split(X, y1, test_size=0.3, random_state=42)\n",
-    "X_train2, X_test2, y_train2, y_test2 = train_test_split(X, y2, test_size=0.3, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "y_train1, y_test1, y_train2, y_test2 = y_train.iloc[:, 0], y_test.iloc[:, 0], y_train.iloc[:, 1], y_test.iloc[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -363,38 +362,91 @@
        "18   0.79  637.0  343.0  147.0  7.0   4  0.00   0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train1.head()"
+    "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Y1</th>\n",
+       "      <th>Y2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>15.08</td>\n",
+       "      <td>15.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>15.19</td>\n",
+       "      <td>19.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>485</th>\n",
+       "      <td>32.31</td>\n",
+       "      <td>32.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>41.67</td>\n",
+       "      <td>46.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>29.63</td>\n",
+       "      <td>30.93</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "334    15.08\n",
-       "139    15.19\n",
-       "485    32.31\n",
-       "547    41.67\n",
-       "18     29.63\n",
-       "Name: Y1, dtype: float64"
+       "        Y1     Y2\n",
+       "334  15.08  15.77\n",
+       "139  15.19  19.30\n",
+       "485  32.31  32.00\n",
+       "547  41.67  46.94\n",
+       "18   29.63  30.93"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train1.head()"
+    "y_train.head()"
    ]
   },
   {
@@ -410,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -648,18 +700,18 @@
     "    grid_search = GridSearchCV(full_pipeline, param_grid=param_grid, cv=5)\n",
     "\n",
     "    # Train model and make predictions for y1\n",
-    "    grid_search.fit(X_train1, y_train1) # Train model\n",
+    "    grid_search.fit(X_train, y_train1) # Train model\n",
     "    final_model1 = grid_search.best_estimator_ # include pre-processing\n",
     "    final_model1_list.append(final_model1) \n",
-    "    y_train1_pred = grid_search.predict(X_train1)\n",
-    "    y_test1_pred = grid_search.predict(X_test1)\n",
+    "    y_train1_pred = grid_search.predict(X_train)\n",
+    "    y_test1_pred = grid_search.predict(X_test)\n",
     "\n",
     "    # Train model and make predictions for y2\n",
-    "    grid_search.fit(X_train2, y_train2) # Train model\n",
+    "    grid_search.fit(X_train, y_train2) # Train model\n",
     "    final_model2 = grid_search.best_estimator_ # include pre-processing\n",
     "    final_model2_list.append(final_model2) \n",
-    "    y_train2_pred = grid_search.predict(X_train2)\n",
-    "    y_test2_pred = grid_search.predict(X_test2)\n",
+    "    y_train2_pred = grid_search.predict(X_train)\n",
+    "    y_test2_pred = grid_search.predict(X_test)\n",
     "    \n",
     "    # Evaluate Train and Test dataset\n",
     "    model_train1_mae , model_train1_rmse, model_train1_mape = evaluate_model(y_train1, y_train1_pred)\n",
@@ -924,7 +976,7 @@
    ],
    "source": [
     "# prediction on heating load (y1)\n",
-    "y_pred1 = final_model_y1.predict(X_test1)\n",
+    "y_pred1 = final_model_y1.predict(X_test)\n",
     "plt.scatter(y_test1, y_pred1)\n",
     "plt.xlabel(\"True\")\n",
     "plt.ylabel(\"Pred\")\n",
@@ -959,7 +1011,7 @@
    ],
    "source": [
     "# prediction on cooling load (y2)\n",
-    "y_pred2 = final_model_y2.predict(X_test2)\n",
+    "y_pred2 = final_model_y2.predict(X_test)\n",
     "plt.scatter(y_test2, y_pred2)\n",
     "plt.xlabel(\"True\")\n",
     "plt.ylabel(\"Pred\")\n",
